# fiap-data-engineering-projeto-final

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
business/: pedidos_processor.py
config/: app_config.py
io_utils/: data_io.py
pipeline/: orchestrator.py
session/: spark_manager.py
tests/: test_pedidos_processor.py
